# test-small-orch

./: Dockerfile  LICENSE  README.md  alembic.ini  create_db.sql  docker-compose.yml  main.py  pyproject.toml
docker/: orch-backend.env  orch-ui.env
migrations/: env.py
migrations/versions/schema/: 2024-07-30_19f8ee4e4b0e_add_create_calculation_workflow.py  2024-07-30_5006b6f72e34_create_calculation_product.py  2024-07-30_be3e458b2f92_run_calculation_workflow.py
products/product_blocks/: calculation.py
products/product_types/: calculation.py
scripts/: run_me.sh
small_orch/: celery_worker.py  settings.py
small_orch/products/: __init__.py
small_orch/products/product_blocks/: calculation.py
small_orch/products/product_types/: calculation.py
small_orch/workflows/: __init__.py
small_orch/workflows/calculation/: create_calculation.py  run_calculation.py
